Fix for styling on smaller screens

--- a/src/styles/DecompressionBay.module.css
+++ b/src/styles/DecompressionBay.module.css
@@ -87,7 +87,7 @@
 
 @media screen and (max-width: 768px) {
   .MinutesButton {
-    width: 320px;
+    width: 120px;
   }
 
   .MinutesButton2 {
